--- a/api/pom.xml
+++ b/api/pom.xml
@@ -57,6 +57,12 @@
             <version>${project.parent.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>de.rapha149.displayutils</groupId>
+            <artifactId>displayutils-1_16_R3</artifactId>
+            <version>${project.parent.version}</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
