--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>api</module>
         <module>wrapper</module>
         <module>1_12_R1</module>
+        <module>1_16_R3</module>
     </modules>
 
     <properties>
